icons, typography, skeleton grid

--- a/Icons. Typography/index.html
+++ b/Icons. Typography/index.html
@@ -32,7 +32,7 @@
   <!-- Primary Page Layout
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <header class="twelve columns">
-      <h1 class="five columns offset-by-one columns" id="mainlogo"><a href="index.html">Weekend Pants Unlimited</a></h1>
+      <h1 class="five columns offset-by-one columns"><a href="index.html">Weekend Pants Unlimited</a></h1>
       <ul class="six columns">
         <li class="info one-third column"><a href="">Shop</a></li>
         <li class="info one-third column"><a href="">About</a></li>
